Working version with Dockerfile